# SDLStartup

./: .gitignore  BitmapData.cpp  BitmapData.h  CMakeLists.txt  GLDebug.cpp  GLDebug.h  GLRenderer.cpp  GLRenderer.h  GLTexture.cpp  GLTexture.h  GLTexturesCache.cpp  GLTexturesCache.h  GLUtils.cpp  GLUtils.h  GLVertexBuffer.cpp  GLVertexBuffer.h  README.md  SimpleCache.cpp  SimpleCache.h  TextureUtils.cpp  TextureUtils.h  headers.h  main.cpp
desktop/: DesktopGameApp.h  DevilImagesDecoder.cpp  DevilImagesDecoder.h  DevilUtils.cpp
engine/: Engine.cpp  Engine.h
functional/: FunctionalTestRunner.cpp  FunctionalTestRunner.h  IFunctionalTest.h  TexturesTest.cpp  TexturesTest.h  VertexColorTest.cpp  VertexColorTest.h
images/: ImagesDecoder.h
src/: BitmapData.cpp  GLDebug.cpp  GLTexturesCache.cpp  GLUtils.h  ResourcesCache.cpp  ResourcesCache.h  headers.h
src/desktop/: DesktopGameApp.cpp  DevilImagesDecoder.cpp  DevilUtils.h  main.cpp
src/engine/: Engine.cpp  GameApp.h
src/functional/: IFunctionalTest.cpp  IFunctionalTest.h  TexturesTest.cpp  TexturesTest.h  VertexColorTest.cpp
unit/: CMakeLists.txt  ExampleTest.cpp  ExampleTest2.cpp  UnitCommon.h  main.cpp
unit/example/: ExampleTest.cpp  ExampleTest2.cpp
